--- a/Quanlythuvien/Views/ucFrom/PhieuTra/ucPhieuTra.resx
+++ b/Quanlythuvien/Views/ucFrom/PhieuTra/ucPhieuTra.resx
@@ -1,4 +1,64 @@
-﻿<root>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<root>
+  <!--
+    Microsoft ResX Schema
+
+    Version 2.0
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
+    associated with the data types.
+
+    Example:
+
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+
+    There are any number of "resheader" rows that contain simple
+    name/value pairs.
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
+    mimetype set.
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
+    extensible. For a given mimetype the value must be set accordingly:
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
+    read any of the formats listed below.
+
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -58,42 +118,44 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="gbtntimkiem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAL5JREFUSEvt
+        lDEOwyAMRZk7dYYKuF6X3i1rD9DeI2fIntjVN0KItjZDpUo8yYr8MTYQg5sME0K4xBjXlNIuxj7rCBmH
+        Et3rxK3xOELt0ORFEuWcr5BfsF8VWSDr4e1LAkhdJMZ8XHzGWN0NUhceR9wKSYesDO5HLLGF/y8g/6Dt
+        npaqmx6QdFi7iAqdIemhXZRL1naTdA9sg2yHEpXL9sY2+WKKnd5bRPaUY+Hk0MaLfGMWMfGzIt77E9yJ
+        BucOM/l7Xa34TtAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="gbtnlaydulieu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAIJJREFUSEvd
+        lVEKwDAIQ3uS9qq72Y62raBQNCWu/ZE+COYj0U/LWdRaL507vk9Ia+35dMtc9rLOMwS3JOs8NEDIdUB9
+        VLYPQeGobB9CA4RcB9RHZfsQFI7K9iE0QMh1QH1Utg9B4ahsH0IDhDwHdiXrPBJYejKjl3We2Qv86/s8
+        hVJevg4hYHfHUEkAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="gbtnxoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANFJREFUSEvt
-        krENwjAURFOBxAgp/rlI5Q0yA+yCmAYkJFbJKhQZggaBLBzknP2DHZoUedI1/9+dHStVtbJoAPQAXl53
-        3v9FUDwS+2bhbusLu2DW+Vk/dn8ouoBm1uaOqV2EZtbmjqldRO4TDaWavoUp2JwK8Y4VepOU/KbZpXPJ
-        PqBpmq2IXAA8+JPdTETO1toN534eAKAF8EyUanLelnuSGGNOFL7Vdb1jn5sBuIZeETmyLyII7HmnISKH
-        Ice7iGwjkZ2j5ykW90VwoFTct7Is3rH0uwhoeWk6AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAGxJREFUSEvt
+        zcsJwDAQA1F3YpeS/pvKB/bo5CEIIQcP6CBszbbFK/Te91nqOWMmSlKae2ajJKV5Jvp8kv7//kDaiQTq
+        RAJ1IoE6kUCdSKBOJFAnEqgTCdRJOvjvgTQ1N2OMbSZ4yrWp+SKhtQP9gM/hpdCmmQAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="gbtnthem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANFJREFUSEvt
-        krENwjAURFOBxAgp/rlI5Q0yA+yCmAYkJFbJKhQZggaBLBzknP2DHZoUedI1/9+dHStVtbJoAPQAXl53
-        3v9FUDwS+2bhbusLu2DW+Vk/dn8ouoBm1uaOqV2EZtbmjqldRO4TDaWavoUp2JwK8Y4VepOU/KbZpXPJ
-        PqBpmq2IXAA8+JPdTETO1toN534eAKAF8EyUanLelnuSGGNOFL7Vdb1jn5sBuIZeETmyLyII7HmnISKH
-        Ice7iGwjkZ2j5ykW90VwoFTct7Is3rH0uwhoeWk6AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAD9JREFUSEtj
+        GAWjAAXIy8v/B2Eol/pg1AKCYOhYADOIVAzVThhg00wMhmonH1DNIFxg1AKCYOhbMAqGImBgAAA/50ax
+        iwcnSgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="gbtnThongtin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAUBJREFUSEvd
-        lD9Ow1AMxnuQ5PNLBkakLixIMFQsPUBXjsEt2iuwcJYs6dDDdEMCGT1X7oedBMZ+kof499kv74+8Wt28
-        APQiMojIF8WgjP2LVUp5DpqGoV6unxSAd9fgDGATeDbKzKc17AkF4GBFbds+MWepxy1yYH4lfyzMROTo
-        dnUM+PxxuT95jPIc3qM1Uf6ivu/vquHs8yKy5kK3yJq8P3eivXze4FiLtj4P4K3m986715wy79Xa6h19
-        3mC4va7r7pnZt7Jrd94nBwvvwJSyFFSJyMk1PzE3pX1S8EelfWzeANgxWyqtrQsMzGyo/Vq9aZoH98J8
-        jMq811g6BM1QSnktpZSgaRjq1Rr75r4XJRP0E8ALezWnjP2To0JFk/SDOUs95v/XRF26g9lJykqOK4zZ
-        Y5lSHYLhKwqH2s3pG6ml8EMPXlzRAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="gbtnsua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANFJREFUSEvt
-        krENwjAURFOBxAgp/rlI5Q0yA+yCmAYkJFbJKhQZggaBLBzknP2DHZoUedI1/9+dHStVtbJoAPQAXl53
-        3v9FUDwS+2bhbusLu2DW+Vk/dn8ouoBm1uaOqV2EZtbmjqldRO4TDaWavoUp2JwK8Y4VepOU/KbZpXPJ
-        PqBpmq2IXAA8+JPdTETO1toN534eAKAF8EyUanLelnuSGGNOFL7Vdb1jn5sBuIZeETmyLyII7HmnISKH
-        Ice7iGwjkZ2j5ykW90VwoFTct7Is3rH0uwhoeWk6AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAIJJREFUSEvd
+        lVEKwDAIQ3uS9qq72Y62raBQNCWu/ZE+COYj0U/LWdRaL507vk9Ia+35dMtc9rLOMwS3JOs8NEDIdUB9
+        VLYPQeGobB9CA4RcB9RHZfsQFI7K9iE0QMh1QH1Utg9B4ahsH0IDhDwHdiXrPBJYejKjl3We2Qv86/s8
+        hVJevg4hYHfHUEkAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
