--- a/Quanlythuvien/Views/ucFrom/PhieuMuon/ucPhieuMuon.resx
+++ b/Quanlythuvien/Views/ucFrom/PhieuMuon/ucPhieuMuon.resx
@@ -126,7 +126,7 @@
         bVTh9oGMzrq38fQFjs6XpZ/nAL4OIWCCMu6rAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="gbtnthem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gbtnTaoPhieuMuon.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAD5JREFUSEtj
         YBgFowAZyMvL/wdhdHGqgVELCIKhYwHMIFIxujk4AbpGYjG6OSQDqhmEC4xaQBAMfQtGwdAEAD/nRrHr
